--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
    <head>
-      <title>About | Location Compiler</title>
+      <title>Contact | Location Compiler</title>
       <link rel="icon" type="image/png" href="http://icons.iconarchive.com/icons/icons8/ios7/512/Photo-Video-Movie-icon.png">
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -21,21 +21,19 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav my-header">
-               <a class="nav-item nav-link active" href="#">Manhattan<span class="sr-only">(current)</span></a>
-               <a class="nav-item nav-link active" href="#">Brooklyn<span class="sr-only">(current)</span></a>
-               <a class="nav-item nav-link active" href="#">Queens<span class="sr-only">(current)</span></a>
-               <a class="nav-item nav-link active" href="#">Bronx<span class="sr-only">(current)</span></a>
-               <a class="nav-item nav-link active" href="#">Harlem<span class="sr-only">(current)</span></a>
+               <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+               <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
+               <a class="nav-item nav-link active" href="#">Contact<span class="sr-only">(current)</span></a>
             </div>
          </div>
       </nav>
       <h2 class="borough-header"><strong class="js-my-modal">CONTACT</strong></h2>
-      <p class="paragraph-center">Have questions or want to become a contributor? Contact us!</p>
-      <div class="typeform-widget" data-url="https://jonathanrothermel.typeform.com/to/jlfX6O" style="width: 100%; height: 500px;" > </div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;" ></div>
+      <p class="paragraph-center">Have questions or want to become a contributor? Use this form to contact us!</p>
+      <div class="typeform-widget" data-url="https://jonathanrothermel.typeform.com/to/jlfX6O" style="width: 100%; height: 400px;" > </div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;" ></div>
       <div class="navbar-footer">
          <nav  class="navbar-footer">
-            <a href="#" class="nav-button-about nav-link-text">Home</a>
-            <a href="#" class="nav-button-contact nav-link-text">About</a>
+            <a href="https://jonrothermel.github.io/FinalProject/" class="nav-button-about nav-link-text">Home</a>
+            <a href="https://jonrothermel.github.io/about-location-compiler/" class="nav-button-contact nav-link-text">About</a>
             <a href="#" class="nav-button-contact nav-link-text">Contact</a>
          </nav>
       </div>
