--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <nav  class="navbar-footer">
             <a href="https://jonrothermel.github.io/FinalProject/" class="nav-button-about nav-link-text">Home</a>
             <a href="https://jonrothermel.github.io/about-location-compiler/" class="nav-button-contact nav-link-text">About</a>
-            <a href="#" class="nav-button-contact nav-link-text">Contact</a>
+            <a href="https://jonrothermel.github.io/contact-location-compiler/" class="nav-button-contact nav-link-text">Contact</a>
          </nav>
       </div>
       <!-- Optional JavaScript -->
